# oryx

./: .gitignore  README.md
.github/workflows/: build-infrastructure.yml  build-website.yml
article-enricher/: Makefile  pyproject.toml  requirements.txt  template.yml
article-enricher/article_enricher/: bootstrap.py  main.py  scraper.py
article-enricher/tests/: test_article_enricher.py  test_scraper.py
articlefn/: README.md  pyproject.toml
articlefn/articlefn/: add.py
articlefn/tests/: test_articlefn.py
claps-api/: README.md  pyproject.toml
claps-api/claps_api/: main.py
claps-api/tests/: test_claps_api.py
design/: openapi.yml
google-chat/: pyproject.toml
google-chat/google_chat/: main.py
google-chat/tests/: test_google_chat.py
infrastructure/: .prettierignore  .prettierrc.yml  README.md  cdk.json  package-lock.json  package.json
infrastructure/lib/: analytics-construct.ts  client-construct.ts  core-construct.ts  infrastructure-stack.ts  public-api-construct.ts  schema.ts
infrastructure/test/: infrastructure.test.ts
website/: cdk-build.sh  package-lock.json  package.json
website/public/: index.html  manifest.json
website/src/: App.js  App.tsx  environment.tsx  index.js  index.tsx  interfaces.ts  override.css  schema.ts  useApi.js  useApi.tsx
website/src/atoms/: Avatar.js  Avatar.tsx  Voter.js  Voter.tsx
website/src/components/: Footer.tsx  Header.js  Header.tsx  StoryLine.js  StoryLine.tsx
website/src/pages/: Layout.tsx  Story.tsx
website/src/styles/: application.css  color-scheme.css  mobile.css
