[tool.poetry]
name = "article-enricher"
version = "0.1.0"
description = ""
authors = ["Tommaso Panozzo <t.panozzo@miriade.it>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-xray-sdk = "^2.7.0"
newspaper3k = "^0.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"
boto3 = "^1.17.52"
openapi-python-client = "^0.8.0"

[tool.black]
max-line = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
